[gd_scene load_steps=4 format=3 uid="uid://cbyr0yksbqd5j"]

[ext_resource type="Script" path="res://giorgos_prototype/hud.gd" id="1_v315s"]
[ext_resource type="PackedScene" uid="uid://bdnsihqxawe5q" path="res://giorgos_prototype/action_timeline.tscn" id="2_x1sbg"]

[sub_resource type="GDScript" id="GDScript_2ufsw"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_v315s")
action_timeline_scene = ExtResource("2_x1sbg")

[node name="BottomPanel" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.482639
anchor_top = 0.938272
anchor_right = 0.517361
anchor_bottom = 1.0
offset_left = -556.0
offset_top = -102.0
offset_right = 556.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.501407, 0.501406, 0.501406, 1)

[node name="Action_1" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -14.0
offset_right = -150.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_2ufsw")

[node name="Action_2" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -14.0
offset_right = 50.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="Action_3" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -85.0
offset_right = 250.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Character_name" type="Label" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -61.0
offset_right = 63.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
text = "Character Name"

[node name="ActionTimelineVbox" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -528.0
offset_right = 530.0
offset_bottom = 13.0
grow_horizontal = 2
alignment = 1

[connection signal="pressed" from="BottomPanel/Action_1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="BottomPanel/Action_2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="BottomPanel/Action_3" to="." method="_on_action_3_pressed"]
